csharp/DTCore/DTCore/Native/DtCoreNative.g.cs

// <auto-generated>
// This code is generated by csbindgen.
// DON'T CHANGE THIS DIRECTLY.
// </auto-generated>
#pragma warning disable CS8500
#pragma warning disable CS8981
using System;
using System.Runtime.InteropServices;


namespace DTCore.Native
{
    internal static unsafe partial class NativeMethods
    {
        const string __DllName = "dt_core_clib";



        [DllImport(__DllName, EntryPoint = "dt_init", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        internal static extern sbyte dt_init(byte* raw_config);

        [DllImport(__DllName, EntryPoint = "dt_add_event", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        internal static extern sbyte dt_add_event(byte* raw_event);

        [DllImport(__DllName, EntryPoint = "dt_add_event_bytes", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        internal static extern sbyte dt_add_event_bytes(byte* utf8_str, int len);

        [DllImport(__DllName, EntryPoint = "dt_flush", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        internal static extern void dt_flush();

        [DllImport(__DllName, EntryPoint = "dt_close", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        internal static extern void dt_close();

        [DllImport(__DllName, EntryPoint = "dt_toggle_logger", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        internal static extern void dt_toggle_logger(byte enable);


    }



}
